# logread

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  json.sh  logr.sh  logr1.sh  test_json.c
include/: cJSON.h  color.h  filter.h  format.h  glibcVersion.h  highlight.h  logr.h  lstring.h  output.h  type.h  utils.h
include/format/: ral.h
include/output/: json.h  string.h
lib/: c-ctype.h  cJSON.c  cJSON.h  memcpy.c  special-char.c  special-char.h  stack.h  stringlib.c  stringlib.h
parser/: app.l  logr.y
src/: cJSON.c  color.h  filter.c  filter.h  format.c  format.h  highlight.c  highlight.h  lbool.h  logr.c  logr.h  lstring.c  memcpy.c  output.c  output.h  type.c  type.h  utils.c  utils.h
src/format/: app.c  app.h  ral.c  ralTrans.c
src/output/: json.c  json.h  string.c  string.h
src/parser/: logr.l  logr.y
src/type/: time.c  time.h
tests/: misservice.log.wf  ral-worker.log.wf  ral.log.wf
